# govocitoslaunch

./: ChangeLog  Makefile.am  configure.ac
po/: ChangeLog  Makefile  Makefile.in  POTFILES
src/: Makefile.am  NucleoLauncher.cpp  NucleoLauncher.h  UtilesLauncher.cpp  UtilesLauncher.h  main.cpp
src/Glade/: DialogoActualizacion.glade  DialogoNotasActualiza.glade
src/Interfaz/: DialogoActulizacion.cpp  DialogoActulizacion.h  DialogoSeleccionAct.cpp  DialogoSeleccionAct.h  InterfazLauncher.cpp  InterfazLauncher.h
src/Modulos/: ConexionBD.cpp  ConexionBD.h  ConfigLauncher.cpp  ConfigLauncher.h  DescargaActualizacion.cpp  DescargaActualizacion.h  InstaladorVersion.cpp  InstaladorVersion.h  InstallGovocitos.cpp  InstallGovocitos.h  ModulosLauncher.cpp  ModulosLauncher.h  XmlInstalador.cpp  XmlInstalador.h  XmlWebVersion.cpp  XmlWebVersion.h
